add helpers for simnets

--- a/src/chains.ipynb
+++ b/src/chains.ipynb
@@ -967,32 +967,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "\n",
-    "def get_chain(chain_id: str, **kwargs) -> Chain:\n",
-    "    if chain_id == '10': return OPChain(**kwargs)\n",
-    "    elif chain_id == '8453': return BaseChain(**kwargs)\n",
-    "    elif chain_id == '130': return UniChain(**kwargs)\n",
-    "    elif chain_id == '1135': return LiskChain(**kwargs)\n",
-    "    else: raise ValueError(f\"Unsupported chain ID: {chain_id}\")\n",
-    "\n",
-    "def get_async_chain(chain_id: str, **kwargs) -> AsyncChain:\n",
-    "    if chain_id == '10': return AsyncOPChain(**kwargs)\n",
-    "    elif chain_id == '8453': return AsyncBaseChain(**kwargs)\n",
-    "    elif chain_id == '130': return AsyncUniChain(**kwargs)\n",
-    "    elif chain_id == '1135': return AsyncLiskChain(**kwargs)\n",
-    "    else: raise ValueError(f\"Unsupported chain ID: {chain_id}\")\n",
-    "\n",
-    "def get_chain_from_token(t: Token, **kwargs) -> Chain: return get_chain(t.chain_id, **kwargs)\n",
-    "def get_async_chain_from_token(t: Token, **kwargs) -> AsyncChain: return get_async_chain(t.chain_id, **kwargs)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1013,19 +987,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'AsyncOPChain' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#| export\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mAsyncOPChainSimnet\u001b[39;00m(\u001b[43mAsyncOPChain\u001b[49m):\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m,  **kwargs): \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m(rpc_uri=\u001b[33m\"\u001b[39m\u001b[33mhttp://127.0.0.1:4444\u001b[39m\u001b[33m\"\u001b[39m, **kwargs)\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mOPChainSimnet\u001b[39;00m(OPChain):\n",
-      "\u001b[31mNameError\u001b[39m: name 'AsyncOPChain' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| export\n",
     "\n",
@@ -1049,6 +1011,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "def get_chain(chain_id: str, **kwargs) -> Chain:\n",
+    "    if chain_id == '10': return OPChain(**kwargs)\n",
+    "    elif chain_id == '8453': return BaseChain(**kwargs)\n",
+    "    elif chain_id == '130': return UniChain(**kwargs)\n",
+    "    elif chain_id == '1135': return LiskChain(**kwargs)\n",
+    "    else: raise ValueError(f\"Unsupported chain ID: {chain_id}\")\n",
+    "\n",
+    "def get_async_chain(chain_id: str, **kwargs) -> AsyncChain:\n",
+    "    if chain_id == '10': return AsyncOPChain(**kwargs)\n",
+    "    elif chain_id == '8453': return AsyncBaseChain(**kwargs)\n",
+    "    elif chain_id == '130': return AsyncUniChain(**kwargs)\n",
+    "    elif chain_id == '1135': return AsyncLiskChain(**kwargs)\n",
+    "    else: raise ValueError(f\"Unsupported chain ID: {chain_id}\")\n",
+    "\n",
+    "def get_simnet_chain(chain_id: str, **kwargs) -> Chain:\n",
+    "    if chain_id == '10': return OPChainSimnet(**kwargs)\n",
+    "    elif chain_id == '8453': return BaseChainSimnet(**kwargs)\n",
+    "    elif chain_id == '1135': return LiskChainSimnet(**kwargs)\n",
+    "    else: raise ValueError(f\"Unsupported chain ID: {chain_id}\")\n",
+    "\n",
+    "def get_async_simnet_chain(chain_id: str, **kwargs) -> AsyncChain:\n",
+    "    if chain_id == '10': return AsyncOPChainSimnet(**kwargs)\n",
+    "    elif chain_id == '8453': return AsyncBaseChainSimnet(**kwargs)\n",
+    "    elif chain_id == '1135': return AsyncLiskChainSimnet(**kwargs)\n",
+    "    else: raise ValueError(f\"Unsupported chain ID: {chain_id}\")\n",
+    "\n",
+    "def get_chain_from_token(t: Token, **kwargs) -> Chain: return get_chain(t.chain_id, **kwargs)\n",
+    "def get_async_chain_from_token(t: Token, **kwargs) -> AsyncChain: return get_async_chain(t.chain_id, **kwargs)\n",
+    "def get_simnet_chain_from_token(t: Token, **kwargs) -> Chain: return get_simnet_chain(t.chain_id, **kwargs)\n",
+    "def get_async_simnet_chain_from_token(t: Token, **kwargs) -> AsyncChain: return get_async_simnet_chain(t.chain_id, **kwargs)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1068,22 +1070,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "==:\n61\n0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdotenv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[32m      6\u001b[39m load_dotenv()\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[43mrequire_supersim\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m test_ne(os.getenv(\u001b[33m\"\u001b[39m\u001b[33mSUGAR_PK\u001b[39m\u001b[33m\"\u001b[39m), \u001b[38;5;28;01mNone\u001b[39;00m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/projects/sugar-sdk/sugar/helpers.py:265\u001b[39m, in \u001b[36mrequire_supersim\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    263\u001b[39m     result = sock.connect_ex((\u001b[33m'\u001b[39m\u001b[33m127.0.0.1\u001b[39m\u001b[33m'\u001b[39m, \u001b[32m4444\u001b[39m))\n\u001b[32m    264\u001b[39m     \u001b[38;5;66;03m# are you running supersim?\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m265\u001b[39m     \u001b[43mtest_eq\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    266\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m socket.error \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[32m    267\u001b[39m     test_eq(err, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/projects/sugar-sdk/env/lib/python3.11/site-packages/fastcore/test.py:39\u001b[39m, in \u001b[36mtest_eq\u001b[39m\u001b[34m(a, b)\u001b[39m\n\u001b[32m     37\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mtest_eq\u001b[39m(a,b):\n\u001b[32m     38\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33m`test` that `a==b`\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m39\u001b[39m     \u001b[43mtest\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43mequals\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcname\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m==\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/projects/sugar-sdk/env/lib/python3.11/site-packages/fastcore/test.py:29\u001b[39m, in \u001b[36mtest\u001b[39m\u001b[34m(a, b, cmp, cname)\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[33m\"\u001b[39m\u001b[33m`assert` that `cmp(a,b)`; display inputs and `cname or cmp.__name__` if it fails\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     28\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m cname \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m: cname=cmp.\u001b[34m__name__\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m cmp(a,b),\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00mb\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m\n",
-      "\u001b[31mAssertionError\u001b[39m: ==:\n61\n0"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sugar.helpers import require_supersim\n",
     "from fastcore.test import test_ne, test_eq, test_close\n",
@@ -1155,7 +1142,14 @@
     "assert get_chain(\"130\")\n",
     "assert get_async_chain(\"130\")\n",
     "assert get_chain(\"1135\")\n",
-    "assert get_async_chain(\"1135\")"
+    "assert get_async_chain(\"1135\")\n",
+    "\n",
+    "assert get_simnet_chain(\"10\")\n",
+    "assert get_async_simnet_chain(\"10\")\n",
+    "assert get_simnet_chain(\"8453\")\n",
+    "assert get_async_simnet_chain(\"8453\")\n",
+    "assert get_simnet_chain(\"1135\")\n",
+    "assert get_async_simnet_chain(\"1135\")\n"
    ]
   },
   {
@@ -1204,11 +1198,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Get tokens async took 0.2998 seconds\n",
-      "Get tokens sync took 0.2463 seconds\n",
-      "Get tokens async on Base took 1.0324 seconds\n",
-      "Get tokens async on Uni took 0.1095 seconds\n",
-      "Get tokens sync on Uni took 0.1838 seconds\n"
+      "Get tokens async took 0.3389 seconds\n",
+      "Get tokens sync took 0.2509 seconds\n",
+      "Get tokens async on Base took 1.1848 seconds\n",
+      "Get tokens async on Uni took 0.0985 seconds\n",
+      "Get tokens sync on Uni took 0.1077 seconds\n"
      ]
     }
    ],
@@ -1288,7 +1282,35 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Get pools async on Base took 9.4783 seconds\n",
+      "Get pools for swap async on Base took 1.9772 seconds\n",
+      "Get pools sync on Base took 10.3236 seconds\n",
+      "Get pools for swap sync on Base took 2.1042 seconds\n",
+      "Get pools async on OP took 0.0006 seconds\n"
+     ]
+    },
+    {
+     "ename": "CancelledError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mCancelledError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 54\u001b[39m\n\u001b[32m     49\u001b[39m         test_eq(\u001b[38;5;28mlen\u001b[39m(results[\u001b[33m\"\u001b[39m\u001b[33msync\u001b[39m\u001b[33m\"\u001b[39m][name][\u001b[33m\"\u001b[39m\u001b[33mpools\u001b[39m\u001b[33m\"\u001b[39m]), \u001b[38;5;28mlen\u001b[39m(results[\u001b[33m\"\u001b[39m\u001b[33masync\u001b[39m\u001b[33m\"\u001b[39m][name][\u001b[33m\"\u001b[39m\u001b[33mpools\u001b[39m\u001b[33m\"\u001b[39m]))\n\u001b[32m     51\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n\u001b[32m---> \u001b[39m\u001b[32m54\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m test_all_chain_pools()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 23\u001b[39m, in \u001b[36mtest_all_chain_pools\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     21\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m test_config[\u001b[33m\"\u001b[39m\u001b[33masync_cls\u001b[39m\u001b[33m\"\u001b[39m]() \u001b[38;5;28;01mas\u001b[39;00m chain:\n\u001b[32m     22\u001b[39m     \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m atime_it(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mGet pools async on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m         async_pools = \u001b[38;5;28;01mawait\u001b[39;00m chain.get_pools()\n\u001b[32m     24\u001b[39m     \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mwith\u001b[39;00m atime_it(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mGet pools for swap async on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m):\n\u001b[32m     25\u001b[39m         async_pools_for_swaps = \u001b[38;5;28;01mawait\u001b[39;00m chain.get_pools(for_swaps=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 16\u001b[39m, in \u001b[36mrequire_async_context.<locals>.wrapper\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[38;5;129m@wraps\u001b[39m(f)\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mwrapper\u001b[39m(\u001b[38;5;28mself\u001b[39m: \u001b[33m'\u001b[39m\u001b[33mCommonChain\u001b[39m\u001b[33m'\u001b[39m, *args, **kwargs) -> T:\n\u001b[32m     15\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m._in_context: \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mChain methods can only be accessed within \u001b[39m\u001b[33m'\u001b[39m\u001b[33masync with\u001b[39m\u001b[33m'\u001b[39m\u001b[33m block\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mawait\u001b[39;00m f(\u001b[38;5;28mself\u001b[39m, *args, **kwargs)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 151\u001b[39m, in \u001b[36mAsyncChain.get_pools\u001b[39m\u001b[34m(self, for_swaps)\u001b[39m\n\u001b[32m    149\u001b[39m \u001b[38;5;129m@require_async_context\u001b[39m\n\u001b[32m    150\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget_pools\u001b[39m(\u001b[38;5;28mself\u001b[39m, for_swaps: \u001b[38;5;28mbool\u001b[39m = \u001b[38;5;28;01mFalse\u001b[39;00m) -> List[LiquidityPool]:\n\u001b[32m--> \u001b[39m\u001b[32m151\u001b[39m     pools = \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m.get_raw_pools(for_swaps)\n\u001b[32m    152\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m for_swaps:\n\u001b[32m    153\u001b[39m         tokens = \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m.get_all_tokens()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/projects/sugar-sdk/env/lib/python3.11/site-packages/async_lru/__init__.py:288\u001b[39m, in \u001b[36m_LRUCacheWrapperInstanceMethod.__call__\u001b[39m\u001b[34m(self, *fn_args, **fn_kwargs)\u001b[39m\n\u001b[32m    287\u001b[39m \u001b[38;5;28;01masync\u001b[39;00m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, /, *fn_args: Any, **fn_kwargs: Any) -> _R:\n\u001b[32m--> \u001b[39m\u001b[32m288\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m.__wrapper(\u001b[38;5;28mself\u001b[39m.__instance, *fn_args, **fn_kwargs)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/projects/sugar-sdk/env/lib/python3.11/site-packages/async_lru/__init__.py:221\u001b[39m, in \u001b[36m_LRUCacheWrapper.__call__\u001b[39m\u001b[34m(self, *fn_args, **fn_kwargs)\u001b[39m\n\u001b[32m    218\u001b[39m     cache_item.cancel()\n\u001b[32m    220\u001b[39m \u001b[38;5;28mself\u001b[39m._cache_miss(key)\n\u001b[32m--> \u001b[39m\u001b[32m221\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mawait\u001b[39;00m asyncio.shield(fut)\n",
+      "\u001b[31mCancelledError\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "# common sense checks\n",
     "\n",
