address pending nits, add more tests

--- a/src/superswap.ipynb
+++ b/src/superswap.ipynb
@@ -336,7 +336,7 @@
     "            # TODO: switch to get_bridge_fee without explicit domain ID when all chains support domains\n",
     "            bridge_fee = from_chain.get_bridge_fee(destination_domain)\n",
     "            xchain_fee = from_chain.get_xchain_fee(destination_domain) if quote.to_token != quote.to_bridge_token else 0           \n",
-    "            total_fee = bridge_fee + xchain_fee if quote.to_token.token_address != quote.to_bridge_token.token_address else bridge_fee \n",
+    "            total_fee = bridge_fee + xchain_fee\n",
     "\n",
     "            cmds, inputs, swap_data = self.prepare_super_swap(\n",
     "                quote,\n",
@@ -444,7 +444,7 @@
     "            # TODO: switch to get_bridge_fee without explicit domain ID when all chains support domains\n",
     "            bridge_fee = await from_chain.get_bridge_fee(destination_domain)\n",
     "            xchain_fee = await from_chain.get_xchain_fee(destination_domain) if quote.to_token != quote.to_bridge_token else 0\n",
-    "            total_fee = bridge_fee + xchain_fee if quote.to_token.token_address != quote.to_bridge_token.token_address else bridge_fee \n",
+    "            total_fee = bridge_fee + xchain_fee\n",
     "\n",
     "            cmds, inputs, swap_data = self.prepare_super_swap(\n",
     "                quote,\n",
