--- a/src/test_swaps.ipynb
+++ b/src/test_swaps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "51b3f11d",
+   "id": "e3adce91",
    "metadata": {},
    "source": [
     "# Test swaps"
@@ -67,6 +67,84 @@
     "\n",
     "    async with AsyncOPChainSimnet() as op_simnet:\n",
     "        print(await op_simnet.swap_from_quote(quote, slippage=0.1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd678c7c",
+   "metadata": {},
+   "source": [
+    "## Superswaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e11dc846",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try unsupported chains\n",
+    "\n",
+    "with OPChainSimnet() as op_sim:\n",
+    "    from_token, to_token = AsyncOPChain.velo, AsyncBaseChain.aero \n",
+    "    error = None\n",
+    "    try:\n",
+    "        tx = Superswap(chain_for_writes=op_sim, relayer=MockSuperswapRelayer()).swap(from_token, to_token, amount=from_token.parse_units(20))\n",
+    "    except ValueError as e:\n",
+    "        error = e\n",
+    "    test_eq(str(error), \"Superswap only supports ['OP', 'Lisk', 'Uni']. Got OP -> Base\")\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12a8f4ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sync version\n",
+    "\n",
+    "for from_token, to_token, amount, requires_relay in superswap_tests_specs:\n",
+    "    with get_simnet_chain_from_token(from_token) as from_sim:\n",
+    "        relayer=MockSuperswapRelayer()\n",
+    "        tx = Superswap(chain_for_writes=from_sim, relayer=relayer).swap(from_token, to_token, amount=amount, slippage=0.1)\n",
+    "        assert(tx.startswith(\"0x\"))\n",
+    "\n",
+    "        if not requires_relay: \n",
+    "            test_eq(relayer.get_call_count(), 0)\n",
+    "            continue\n",
+    "\n",
+    "        test_eq(relayer.get_call_count(), 1)\n",
+    "        last_call = relayer.get_last_call()\n",
+    "        test_eq(type(last_call[\"salt\"]), str)\n",
+    "        test_eq(type(last_call[\"origin_domain\"]), int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f0473a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# async version\n",
+    "\n",
+    "for from_token, to_token, amount, requires_relay in superswap_tests_specs:\n",
+    "    async with get_async_simnet_chain_from_token(from_token) as from_sim:\n",
+    "        relayer=MockSuperswapRelayer()\n",
+    "        tx = await AsyncSuperswap(chain_for_writes=from_sim, relayer=relayer).swap(from_token, to_token, amount=amount, slippage=0.1)\n",
+    "        assert(tx.startswith(\"0x\"))\n",
+    "\n",
+    "        if not requires_relay: \n",
+    "            test_eq(relayer.get_call_count(), 0)\n",
+    "            continue\n",
+    "\n",
+    "        test_eq(relayer.get_call_count(), 1)\n",
+    "        last_call = relayer.get_last_call()\n",
+    "        test_eq(type(last_call[\"salt\"]), str)\n",
+    "        test_eq(type(last_call[\"origin_domain\"]), int)"
    ]
   }
  ],
