add balance checking functioanlity

--- a/src/test_swaps.ipynb
+++ b/src/test_swaps.ipynb
@@ -5,7 +5,9 @@
    "id": "e3adce91",
    "metadata": {},
    "source": [
-    "# Test swaps"
+    "# Test balances, swaps and superswaps\n",
+    "\n",
+    "Make sure honey is running via `python honey.py`"
    ]
   },
   {
@@ -23,6 +25,40 @@
     "from test_specs import superswap_tests_specs\n",
     "\n",
     "require_supersim()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f99d0514",
+   "metadata": {},
+   "source": [
+    "## Check on balances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22d4cae9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# quick balance spot check (and test get_token_balance in the process)\n",
+    "\n",
+    "async with AsyncOPChainSimnet() as simnet:\n",
+    "    test_eq(await simnet.get_token_balance(AsyncOPChainSimnet.velo), 1000000000000000000000)\n",
+    "    test_eq(await simnet.get_token_balance(AsyncOPChainSimnet.eth), 10000000000000000000000)\n",
+    "\n",
+    "with OPChainSimnet() as simnet:\n",
+    "    test_eq(simnet.get_token_balance(OPChainSimnet.velo), 1000000000000000000000)\n",
+    "    test_eq(simnet.get_token_balance(OPChainSimnet.eth), 10000000000000000000000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bed38b05",
+   "metadata": {},
+   "source": [
+    "## Test swaps"
    ]
   },
   {
